# Outpost

./: .gitignore  CMakeLists.txt  README.md  inject_events.py  install.sh
config/: outpost.yaml.example
config/rules/: fortigate.yaml
frontend/: index.html  package-lock.json  package.json
frontend/public/Images/: KALLIX-ASSET-GUIDE.md  KALLIX-ASSET-GUIDE.md:Zone.Identifier  New_Column_icon
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ActiveRules.jsx  EditRuleModal.jsx  GeoMap.jsx  Globe3D.jsx  KallixLogo.jsx  RuleBuilder.jsx  WidgetModal.jsx
frontend/src/pages/: Alerts.jsx  Dashboard.jsx  DashboardBuilder.jsx  DataSources.jsx  Endpoints.jsx  Events.jsx  Login.jsx  Reports.jsx  ResetPassword.jsx  Rules.jsx  Settings.jsx
frontend/src/utils/: constants.js  formatters.js
frontend/src/widgets/: WidgetRegistry.js  WidgetRenderer.jsx
src/: main.cpp
src/api/: routes_auth.cpp  routes_connectors.cpp  routes_events.cpp  routes_hec.cpp  routes_rules.cpp  routes_stats.cpp  routes_users.cpp  server.cpp  server.h
src/auth/: auth.cpp  auth.h  smtp.cpp  smtp.h
src/common/: utils.h
src/ingestion/: connector_manager.cpp  http_poller.cpp  http_poller.h  syslog_listener.cpp
src/parser/: azure_parser.cpp  azure_parser.h  cef_parser.cpp  cef_parser.h  unifi_parser.cpp
src/storage/: postgres_alerts.cpp  postgres_auth.cpp  postgres_connectors.cpp  postgres_geo.cpp  postgres_reset.cpp  postgres_storage_engine.cpp  postgres_storage_engine.h
tests/: README.md  test_inject_events.cpp
